# uefi_boot_system

./: CMakeLists.txt  FINISH_CHECKLIST.md  README.md
ESP/: NvVars
ESP/EFI/BOOT/: BOOTX64.EFI
ESP/kernel/: kernel.elf
Knowdgle/: erros-e-solucoes.md
bootloader/: CMakeLists.txt
bootloader/include/: device_path.hpp  efi_console.hpp  efi_defs.hpp  elf_loader.hpp  file.hpp  framebuffer.hpp  graphics_output.hpp  loaded_image.hpp  memory_map.hpp  simple_file_system.hpp  uefi_application.hpp
bootloader/src/: efi_console.cpp  elf_loader.cpp  file.cpp  framebuffer.cpp  main.cpp  memory_map.cpp  uefi_application.cpp
common/: boot_info.hpp
kernel/: CMakeLists.txt
kernel/include/: cpu.hpp  drivers.hpp  filesystem.hpp  gui.hpp  kernel.hpp  network.hpp  performance.hpp  scheduler.hpp  security.hpp  userspace.hpp
kernel/src/: context_switch.S  cpu.cpp  drivers.cpp  entry.S  filesystem.cpp  gui.cpp  interrupt_stubs.S  kernel.cpp  network.cpp  performance.cpp  scheduler.cpp  security.cpp  userspace.cpp
scripts/: build.sh  clean.sh  qemu_smoke.sh  run.sh  setup_step1.sh  setup_step2.sh  setup_step3.sh  test.sh
